--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="jumbotron">
                 <h1>Drugs</h1>
-                <p>Do Drugs And Dont Go To School</p> 
+                <p>Dont Do Drugs</p> 
             </div>
                     
             <nav class="navigation">
