--- a/menu3a.html
+++ b/menu3a.html
@@ -53,6 +53,10 @@
         .paragraf{
         color:white;
         }
+	    p{
+	    color:white;
+	    }
+	    
     </style>
     <script>
        
